Audio section border fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,11 +263,12 @@ Body content
 
 .audio-section {
     margin: 7em auto;
-    border: 1px solid rgba(135, 207, 235, 0.233);
+    
     display: flex;
     flex-direction: column;
     /* margin-bottom: 50vh; */
     max-height: 40vh;
+    border: 1px solid rgba(135, 207, 235, 0.233);
 
     
 }
@@ -299,6 +300,12 @@ audio {
     width: 40%;
     opacity: .5;
     
+}
+
+@media (max-height: 500px) {
+    audio {
+        max-width: 2%;
+    }
 }
 
 /* ---------------------------------
